# Background

./: .env.example  .eslintrc.js  .gitignore  .parcelrc  .prettierrc  Cargo.toml  Get-Icons.ps1  README.md  package-lock.json  package.json  pnpm-lock.yaml  polyfill.types.d.ts  tsconfig.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yml  format.yml
bufr-to-yaml/src/: main.rs
dwd-bufr-tables/: Cargo.toml
dwd-bufr-tables/src/: lib.rs
dwd-gts/src/: lib.rs
dwd-synop/: stations-to-geojson.py
lib/bufr-to-yaml/: Cargo.toml
lib/dwd-bufr-tables/: Cargo.toml
lib/dwd-fetch/: Cargo.toml
lib/dwd-fetch/src/: forecast.rs  lib.rs  option_ext.rs  radar.rs  report.rs  synoptic.rs
lib/dwd-gts/: Cargo.toml
lib/skia-util/: Cargo.toml
lib/skia-util/src/: color.rs  extensions.rs  fonts.rs  gradient.rs  lib.rs  squircle.rs
lib/weather-layout/: Cargo.toml
lib/weather-layout/src/: data.rs  fmt.rs  gradients.rs  lib.rs  lines.rs
scripts/: read-libdwd-tables.py
scripts/chatterino-plugin/: info.json  init.lua
src/: application.rs  config.rs  context.rs  extensions.rs  graph.rs  graphics.rs  http_server.rs  icons.rs  logging.rs  main.rs  notifications.rs  picolini.rs  squircle.rs  window.rs
src/dwd/: forecast.rs  icons.rs  mod.rs  radar.rs  report.rs  synoptic.rs
src/layout/: mod.rs  text.rs
src/paint/: image.rs  line.rs  mod.rs  ops.rs  path.rs  rect.rs  squircle.rs  svg.rs  text.rs
src/platform/: windows.rs
