[package]
name = "my-background"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "bin/min-dwd",
    "bin/picolini-srv",
    "lib/bufr-to-yaml",
    "lib/dwd-bufr-tables",
    "lib/dwd-fetch",
    "lib/dwd-gts",
    "lib/skia-util",
    "lib/weather-layout",
]

[workspace.dependencies]
anyhow = "1.0.102"
atoi = "2.0.0"
bincode = { version = "2.0.1", features = ["serde"] }
bytemuck = "1.25.0"
bzip2 = "0.6.0"
derive_more = { version = "2.1.1", features = ["display"] }
dwd-bufr-tables = { path = "lib/dwd-bufr-tables" }
dwd-fetch = { path = "lib/dwd-fetch" }
dwd-gts = { path = "lib/dwd-gts" }
itertools = "0.14.0"
jiff = { version = "0.2.23", features = ["serde"] }
memchr = "2.8.0"
proj4rs = "0.1.10"
quick-xml = "0.39.2"
regex = "1.12.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.149" }
skia-safe = { version = "0.93.1" }
skia-util = { path = "lib/skia-util" }
tar = "0.4.45"
tinybufr = "0.1.3"
toml = "1.1.0"
ureq = { version = "3.3.0", features = [
    "gzip",
    "json",
    "rustls",
], default-features = false }
weather-layout = { path = "lib/weather-layout" }
zip = { version = "8.5.0", default-features = false, features = ["deflate"] }
icu_datetime = "2.0"
icu_locale = "2.0"
actix-web = "4.13"
constant_time_eq = "0.4"
base64 = "0.22"
actix-web-error = "0.2"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
arraydeque = "0.5.1"

[dependencies]
anyhow = { workspace = true }
atoi = { workspace = true }
bincode = { workspace = true }
bytemuck = { workspace = true }
bzip2 = { workspace = true }
clap = { version = "4.5.47", features = ["derive"] }
derive_more = { workspace = true }
dwd-bufr-tables = { workspace = true }
dwd-fetch = { workspace = true }
dwd-gts = { workspace = true }
enum_dispatch = "0.3.13"
image = { version = "0.25.6", default-features = false, features = ["png"] }
jiff = { workspace = true }
memchr = { workspace = true }
proj4rs = { workspace = true }
quick-xml = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
skia-safe = { workspace = true, features = [
    "d3d",
    "windows",
    "textlayout",
    "svg",
] }
skia-util = { workspace = true }
tar = { workspace = true }
tinybufr = { workspace = true }
toml = { workspace = true }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
ureq = { workspace = true }
weather-layout = { workspace = true }
win-msgbox = "0.2.2"
windows = { version = "0.62.1", features = [
    "Win32",
    "Win32_Graphics",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D",
    "Win32_Foundation",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }
windows-registry = "0.6.0"
windows-strings = "0.5.0"
winit = "0.30.12"
zip = { workspace = true }

[profile.release]
codegen-units = 1
debug = "none"
lto = "fat"
